--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "react": "^16.8.0-alpha.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "husky": "^1.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
