--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.8.0-alpha.1"
+    "react": "^16.8.1"
   },
   "devDependencies": {
-    "husky": "^1.3.1"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1"
   },
   "scripts": {
+    "prepublish": "babel useInterval.js --out-file index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
